--- a/app/src/main/res/drawable/rounded_border_grey.xml
+++ b/app/src/main/res/drawable/rounded_border_grey.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<stroke android:width="@dimen/_2sdp" android:color="#4A4A4A"/>
+<stroke android:width="@dimen/_2sdp" android:color="#918F8F"/>
 <corners android:radius="@dimen/_20sdp"/>
 </shape>
