--- a/app/src/main/res/layout/activity_guest_list_item.xml
+++ b/app/src/main/res/layout/activity_guest_list_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/itemCheckLinearlayout"
+    android:id="@+id/guestCheckLinearlayout"
     android:layout_margin="@dimen/_10sdp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,7 +12,7 @@
     android:orientation="horizontal"
     android:padding="@dimen/_10sdp"
     android:textAlignment="center"
-    tools:context=".CheckListItem">
+    tools:context=".ItemsCheckListSingleItem">
 
     <CheckBox
         android:id="@+id/guestListCheckbox"
