--- a/app/src/main/res/layout/activity_items_check_list.xml
+++ b/app/src/main/res/layout/activity_items_check_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F0F2F6"
-    tools:context=".CheckList">
+    tools:context=".ItemsCheckList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/checkListRecyclerView"
