--- a/app/src/main/res/layout/activity_items_check_list_item.xml
+++ b/app/src/main/res/layout/activity_items_check_list_item.xml
@@ -12,7 +12,7 @@
     android:orientation="horizontal"
     android:padding="@dimen/_10sdp"
     android:textAlignment="center"
-    tools:context=".CheckListItem">
+    tools:context=".ItemsCheckListSingleItem">
 
     <CheckBox
         android:id="@+id/itemListCheckbox"
