--- a/app/src/main/res/layout/activity_display_balloon_birthday_card.xml
+++ b/app/src/main/res/layout/activity_display_balloon_birthday_card.xml
@@ -3,9 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
+    android:id="@+id/balloonCardLayout"
     android:layout_height="match_parent"
     tools:context=".DisplayBalloonBirthdayCardActivity"
     >
+
 
     <ImageView
         android:id="@+id/imageView2"
@@ -13,10 +16,10 @@
         android:layout_height="@dimen/_190sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.38"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.033"
         app:srcCompat="@drawable/hbd" />
 
     <ImageView
@@ -28,7 +31,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.996"
+        app:layout_constraintVertical_bias="0.971"
         app:srcCompat="@drawable/ballon" />
 
     <ImageView
@@ -40,7 +43,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.996"
+        app:layout_constraintVertical_bias="0.944"
         app:srcCompat="@drawable/cake" />
 
     <TextView
@@ -72,4 +75,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
         app:layout_constraintVertical_bias="0.605" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
