--- a/app/src/main/res/layout/activity_display_flower_birthday_card.xml
+++ b/app/src/main/res/layout/activity_display_flower_birthday_card.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DisplayFlowerBirthdayCardActivity"
-    android:background="#FFFFFF">
+    android:id="@+id/flowerCardLayout"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/imageView2"
