--- a/app/src/main/res/layout/activity_display_superman_birthday_card.xml
+++ b/app/src/main/res/layout/activity_display_superman_birthday_card.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DisplaySuperManBirthdayCardActivity"
+    android:id="@+id/supermanCardLayout"
     android:background="#FAF6F6">
 
     <ImageView
